# Spoolman-light

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  spoolman.json
.claude/: settings.local.json
.github/workflows/: ci.yml
.memsearch/memory/: 2026-03-31.md  2026-04-01.md
.playwright-cli/: page-2026-03-24T09-11-38-800Z.yml  page-2026-03-24T09-13-23-397Z.yml  page-2026-03-24T09-36-09-341Z.yml  page-2026-03-24T09-58-10-146Z.yml  page-2026-03-24T09-59-32-942Z.yml  page-2026-03-24T10-00-00-673Z.yml  page-2026-03-24T10-00-31-798Z.yml  page-2026-03-24T10-00-41-392Z.yml  page-2026-03-24T10-01-01-601Z.yml  page-2026-03-24T10-02-26-610Z.yml  page-2026-03-24T10-02-57-552Z.yml  page-2026-03-24T10-03-06-806Z.yml  page-2026-03-24T10-03-28-014Z.yml  page-2026-03-24T10-19-16-752Z.yml  page-2026-03-24T10-23-59-765Z.yml  page-2026-03-24T10-24-15-898Z.yml  page-2026-03-24T10-25-15-965Z.yml  page-2026-03-24T10-25-25-546Z.yml
.playwright-mcp/: page-2026-04-02T08-33-54-099Z.yml  page-2026-04-02T08-34-58-797Z.yml  page-2026-04-02T08-36-00-816Z.yml  page-2026-04-02T08-36-11-521Z.yml  page-2026-04-02T08-37-17-638Z.yml  page-2026-04-02T08-37-59-602Z.yml  page-2026-04-02T08-38-13-145Z.yml  page-2026-04-02T08-39-54-335Z.yml  page-2026-04-02T08-40-41-650Z.yml  page-2026-04-02T13-27-17-687Z.yml  page-2026-04-02T13-27-33-128Z.yml  page-2026-04-02T13-35-00-369Z.yml  page-2026-04-02T13-35-11-323Z.yml  page-2026-04-02T13-44-44-790Z.yml  page-2026-04-02T13-50-01-570Z.yml  page-2026-04-12T14-09-19-710Z.yml  page-2026-04-12T14-38-31-754Z.yml  page-2026-04-12T15-22-59-568Z.yml  page-2026-04-12T15-41-34-751Z.yml  page-2026-04-12T18-20-26-941Z.yml  page-2026-04-12T18-20-43-389Z.yml  page-2026-04-12T18-20-51-693Z.yml  page-2026-04-14T08-39-50-383Z.yml  page-2026-04-14T08-53-12-146Z.yml
assets/: spoolman.json
crates/spoolman-client/: Cargo.toml
crates/spoolman-client/src/: app.rs  format.rs  lib.rs  spoolmandb.rs  state.rs
crates/spoolman-client/src/api/: filament.rs  location.rs  mod.rs  spool.rs
crates/spoolman-client/src/components/: layout.rs  mod.rs  pagination.rs  spoolmandb_search.rs  table.rs
crates/spoolman-client/src/pages/: filament.rs  help.rs  home.rs  location.rs  mod.rs  settings.rs  spool.rs
crates/spoolman-client/src/utils/: color.rs
crates/spoolman-server/: Cargo.toml
crates/spoolman-server/src/: config.rs  index.html  lib.rs  main.rs  store.rs
crates/spoolman-server/src/routes/: error.rs  filament.rs  health.rs  location.rs  mod.rs  other.rs  spool.rs
crates/spoolman-server/tests/: filament.rs  health.rs  location.rs  seeded.rs  settings.rs  spool.rs
crates/spoolman-server/tests/common/: mod.rs
crates/spoolman-types/src/: models.rs  requests.rs  responses.rs
openspec/changes/add-filament-type/: design.md  proposal.md  tasks.md
openspec/changes/alternative-color-distance/: design.md  proposal.md  tasks.md
openspec/changes/color-hex-display/: proposal.md  tasks.md
openspec/changes/color-search-spool-list/: design.md  proposal.md  tasks.md
openspec/changes/docker-playwright-testsuite/: design.md  proposal.md  tasks.md
openspec/changes/fix-convert-export-script/: design.md  proposal.md  (+1 more)
scripts/: convert_export.py  expand_testdata.py  run-e2e.sh  test_convert_export.py
spoolman/: env.py  export.py  extra_fields.py  main.py
spoolman/storage/: dependencies.py  models.py  store.py
style/: spoolman.css
test-results/: .last-run.json
tests/playwright/: package-lock.json  package.json  playwright.config.ts
tests_integration/: docker-compose-sqlite.yml  run.py
tests_integration/tests/: conftest.py  test_backup.py
(+234 files in other folders)
