[package]
name = "spoolman-client"
version = "1.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spoolman-types = { path = "../spoolman-types" }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.7", features = ["http"] }
console_error_panic_hook = "0.1"
deltae = "0.3.2"
oklab = "1.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
